--- a/ecomm.ipynb
+++ b/ecomm.ipynb
@@ -420,8 +420,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "457a03f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mike"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcf032a5",
    "metadata": {},
    "outputs": [],
    "source": []
